# matrix-calculator

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  popovle1  prohlaseni.txt  zadani.txt
Calculator/: CCalculator.cpp  CCalculator.h  CEvaluator.cpp  CEvaluator.h
Matrix/: CMatrix.cpp  CMatrix.h  CMatrixDense.h  CMatrixSparse.h
examples/: CDet_4_318.txt  CDet_5_32.txt  CInv_3.txt  CInv_4.txt  CRank_4_2.txt
src/: main.cpp
src/Calculator/: CCalculator.cpp  CCalculator.h  CEvaluator.cpp  CEvaluator.h  CHistory.cpp  CHistory.h  CMemory.cpp  CMemory.h
src/Command/: CCommand.cpp  CCommand.h  CCommandHelp.cpp  CCommandHelp.h  CExit.cpp  CExit.h  CHelp.cpp  CHelp.h
src/Command/Basic/: CDel.cpp  CDel.h  CExit.cpp  CExit.h  CHelp.cpp  CHelp.h  CHelpCmd.cpp  CHelpCmd.h  CUndo.cpp  CUndo.h  CVars.cpp  CVars.h
src/Command/Common/: CCommand.cpp  CCommand.h  CDel.cpp  CDel.h  CExit.cpp  CExit.h  CHelp.cpp  CHelp.h  CHelpCmd.cpp  CHelpCmd.h  CVars.cpp  CVars.h
src/Command/Math/: CAdj.cpp  CAdj.h  CDet.cpp  CDet.h  CGem.cpp  CGem.h  CInv.cpp  CInv.h  CRank.cpp  CRank.h
src/Command/Memory/: CLoad.cpp  CLoad.h  CPrint.cpp  CPrint.h  CSave.cpp  CSave.h  CScan.cpp  CScan.h
src/Command/Operation/: CAdd.cpp  CAdd.h  CCut.cpp  CCut.h  CMerge.cpp  CMerge.h  CMul.cpp  CMul.h  CSub.cpp  CSub.h  CTrans.cpp  CTrans.h
src/Command/Read/: CExit.cpp  CVars.cpp  CVars.h
src/Command/ReadBasic/: CExit.h  CHelp.cpp  CHelp.h  CPrint.cpp  CPrint.h  CUndo.cpp  CUndo.h
src/Command/WriteBasic/: CAdd.cpp  CAdd.h  CMul.cpp  CMul.h  CSub.cpp  CSub.h  CTrans.cpp  CTrans.h
src/Command/WriteComplex/: CCut.cpp  (+5 more)
src/Matrix/: CMatrix.cpp  CMatrix.h  CMatrixDense.cpp  CMatrixDense.h  CMatrixSparse.cpp  CMatrixSparse.h
(+2 files in other folders)
